--- a/GUI_DocGia/frmDocGia.resx
+++ b/GUI_DocGia/frmDocGia.resx
@@ -121,6 +121,19 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2Button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        7AAAAOwBeShxvQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGCSURBVFhH7ddJ
+        SsRAFMbxFkF073wBQXC4hNNKBXXjxgs43EH0DiLo0gGnuyjqVkFxp+4V/X+BB0LH1KtKgS7ywQ9MOnn9
+        TFWS6lYTRzowgXksJ5jDIJIyg3t81fSJSwzDnRV8oKxgqke4mujFO+zEI6yh7BKHbOAaVusCwegkO2FH
+        O2qmG9aEhiM4Jw5hDQxpR4ZswmpqblXmFHZwrmg4rKb+rsyfN3AMHai7oCydmEZ/seVLVAMLeMVesdWe
+        bajQE0a0w5GoBkKxBmKayNpAF/Rks4IvGEVVXA1MQh96rOIZVjR0JXROZQN64eghYQeluMVv+f8NKOPQ
+        hx4aAl12K6rhqDUEMdEkvIIVzDYJvfl5G4b+c0tUA4t4w36x1R5rwPvlSlQDnkfxFPqKLV+iGmjehgew
+        g3MtSLZgNfUmrcw67OBd7aiZHtxA9VxLMi1KdRdYEydIXZRqKWZfLmdwZQm5l+UPiBpS3Wp3KCsWQ5f9
+        HMnzaQypP81mMYAmJWm1vgEDSA3APaCJewAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnTk_Sach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAqxJREFUaEPt
