--- a/GUI_NhanVien/FrmNhanVien.resx
+++ b/GUI_NhanVien/FrmNhanVien.resx
@@ -121,6 +121,20 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2Button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAdZJREFUaEPt
+        2c0rRUEYx/HrfSGiSJHE/8DCf0Hyh7CwsFWsSJSlJSUsJDv+BrK18Bp52ShvC3yfxa1Jj2bOPTNn7tT5
+        1Wc5z3Pu7ZyZc2YqZcqU8ZJGjGEW2zjDyx+n2MIMRiFjomcAS7jGT0ZXWEQ/Ck83VvEB7eKyeMcKulBI
+        pvAA7WLyuMckgqUFG9Ca+7SGZnhNO46gNQzhENLTS9pwAq1RSMdoRe6sQ2tQBHm4c2UaWuGifGMCNaUX
+        sgBphYv0hB5kjswGWsEYlpEpQ/iCViwGWTBl1XeOLPFaoZgW4BRZRGRV1IrEdIsmWDMOrUA9kDdea+ah
+        Da4Hc7BmD9pg0wGG4SsjkNcHrZdpB9acQxtsGoTvyMyn9TLJh5I1z9AGm0JF62V6hDWf0AabQkXrZZL1
+        wBqXBSxUtF4mpx+Q/C3k8hBnWtYdIxOD1svk9BC7TqM+dxPkD/E2jSa/kCX/KiE7ZpfQCsR0gQY4JenX
+        aUkf3qAViuEVmT8rk/6klHTiDlrBIt2gAzUl6W2VamLeSrk3tiQyrcrBhNYgpE04T5u2yP7oPrRGIexC
+        enqN7FYUtb3utPtQa5I94DCT9BGTmWQP+f7mv2PW6sXW7TFrmTJpp1L5BSjWNa2I3zjiAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <data name="btnM_Caidat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABExJREFUeF7t
